--- a/app/src/main/res/layout/activity_fifth.xml
+++ b/app/src/main/res/layout/activity_fifth.xml
@@ -16,44 +16,50 @@
         android:text="Skills"
         android:textStyle="bold"
         android:gravity="center"
+        android:letterSpacing="0.2"
         android:layout_marginBottom="50dp"
         android:textSize="40dp"/>
 
     <EditText
+        android:id="@+id/skill1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/shap1"
         android:layout_marginBottom="10dp"
         android:paddingLeft="10dp"
-        android:hint="add here"/>
+        android:hint="skill1"/>
 
     <EditText
+        android:id="@+id/skill2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/shap1"
         android:paddingLeft="10dp"
-        android:hint="add here"
+        android:hint="skill2"
         android:layout_marginBottom="10dp"/>
     <EditText
+        android:id="@+id/skill3"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/shap1"
         android:paddingLeft="10dp"
-        android:hint="add here"
+        android:hint="skill3"
         android:layout_marginBottom="10dp"/>
     <EditText
+        android:id="@+id/skill4"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:paddingLeft="10dp"
-        android:hint="add here"
+        android:hint="skill4"
         android:background="@drawable/shap1"
         android:layout_marginBottom="10dp"/>
     <EditText
+        android:id="@+id/skill5"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/shap1"
         android:paddingLeft="10dp"
-        android:hint="add here"
+        android:hint="skill5"
         android:layout_marginBottom="10dp"/>
 
     <LinearLayout
