--- a/app/src/main/res/layout/activity_homeactivity.xml
+++ b/app/src/main/res/layout/activity_homeactivity.xml
@@ -20,6 +20,7 @@
         android:text="Personal Details"
         android:paddingLeft="60dp"
         android:textSize="40dp"
+        android:letterSpacing="0.08"
         android:textStyle="bold"
         android:layout_marginBottom="50dp"/>
 
@@ -42,6 +43,7 @@
         android:paddingLeft="10dp"
         android:hint="Address:"/>
     <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="10dp"
