--- a/app/src/main/res/layout/activity_sixth.xml
+++ b/app/src/main/res/layout/activity_sixth.xml
@@ -13,51 +13,46 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"                                        
-        android:text="Projects"
+        android:text="Project"
         android:textStyle="bold"
         android:textSize="40dp"
+        android:letterSpacing=".2"
         android:layout_marginBottom="50dp"
         android:gravity="center"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     
     <EditText
+        android:id="@+id/Github"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:background="@drawable/shap1"
-        android:hint="add here"
+        android:hint="GitHub Link"
         android:layout_marginBottom="10dp"
         android:paddingLeft="10dp"/>
 
     <EditText
+        android:id="@+id/Linkedin"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:background="@drawable/shap1"
-        android:hint="add here"
+        android:hint="Linkedin"
         android:layout_marginBottom="10dp"
         android:paddingLeft="10dp"/>
 
     <EditText
+        android:id="@+id/other"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:background="@drawable/shap1"
-        android:hint="add here"
+        android:hint="Other Project"
         android:layout_marginBottom="10dp"
         android:paddingLeft="10dp"/>
+    </LinearLayout>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/shap1"
-        android:hint="add here"
-        android:layout_marginBottom="10dp"
-        android:paddingLeft="10dp"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/shap1"
-        android:hint="add here"
-        android:layout_marginBottom="50dp"
-        android:paddingLeft="10dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
