--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Education"
+        android:letterSpacing=".2"
         android:textSize="30dp"
         android:textStyle="bold"
         android:layout_marginBottom="30dp"/>
